[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
# members = ["mobile"]

# [profile.dev.package."*"]
# opt-level = 3

# [profile.dev]
# opt-level = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]

bevy = { version = "0.14", default-features = false, features = ["animation", "bevy_asset", "bevy_state", "bevy_color", "bevy_gilrs", "bevy_scene", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "multi_threaded", "png", "hdr", "x11", "bevy_gizmos", "tonemapping_luts", "smaa_luts", "default_font", "webgl2", "sysinfo_plugin", "mp3"] }
bevy_kira_audio = { version = "0.20" }
bevy_asset_loader = { version = "0.21" }
rand = { version = "0.8.3" }
webbrowser = { version = "1", features = ["hardened"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }

bevy-inspector-egui = "0.25"

log = "0.4.21"
noise = "0.9.0"
lazy_static = "1.4.0"
avian2d = "0.1.0"
bevy_light_2d = "0.2.0"

[build-dependencies]
embed-resource = "1"

# bg.mp3: https://www.youtube.com/watch?v=YQyvf5mSnHc